# whisper.cpp

./: .gitignore  AGENTS.md  COMPARISON_REPORT.md  commands  main.py  pyproject.toml  test.sh
examples/addon.node/: .gitignore  CMakeLists.txt  README.md  addon.cpp  package-lock.json  package.json  persistent-context-example.js  streaming-example.js  test-coreml-transcribe.js  test-openvino.js  vad-realtime-demo.js  vad-streaming-example.js
examples/cli/: cli.cpp
include/: whisper.h
models/: compress-encoder-int8.py  ggml-large-v3-turbo-encoder-openvino-fp16.xml  ggml-large-v3-turbo-encoder-openvino-int8.xml  quantize-openvino-encoder.py
models/whisper-large-v3-turbo-int8-ov/: openvino_encoder_model.xml
npm/: .gitignore  dtw-tool.js  package.json  pnpm-lock.yaml  test-dtw-timestamps.js  test-ia32.js  test-macos-package.js  test-package.js  test-windows-package.js
npm/scripts/: copy-binary.js  copy-binary.sh
src/: whisper.cpp
