[project]
name = "whisper-cpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai-whisper>=20250625",
    "openvino>=2024.6.0",
    "openvino-dev>=2024.6.0",
    "torch>=2.5.0",
    "onnxscript>=0.1.0",
    "nncf==2.14.0",
]
